# OneGameLinux

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
FirstGameLinux/: .clang-format  CMakeLists.txt
FirstGameLinux/src/: filesystem.cpp  filesystem.h  keymap.cpp  keymap.h  main.cpp  mousemap.cpp  mousemap.h
cmake/: glad.cmake  glfw3.cmake
